feat: Add Redis caching, CI/CD pipelines, professional docs and security fixes